# qgitc

./: .env  .gitignore  Qt.py  README.md  aboutdialog.py  colorwidget.py  comboboxitemdelegate.py  common.py  cxfreeze-setup.py  datafetcher.py  diffview.py  excepthandler.py  findwidget.py  git.py  gitc  gitc.py  gitview.py  logview.py  mergetool.py  mergewidget.py  preferences.py  preferences.ui  pyproject.toml  qgitc.py  requirements.txt  settings.py  setup.py  shell-integration.bat  ui_aboutdialog.py  ui_gitview.py  ui_mainwindow.py  ui_preferences.py  version.py  waitingspinnerwidget.py
.github/: copilot-instructions.md
.github/workflows/: main.yml  tests.yml
data/licenses/: Apache-2.0.html
data/translations/: genqm.sh  gitc.pro  upts.sh  zh_CN.ts
docs/: AI_FILTER_DOCUMENTATION.md  AI_FILTER_EXAMPLES.md  CHERRY_PICK_DRAG_DROP.md  CHERRY_PICK_OVERVIEW.md  CHERRY_PICK_WINDOW.md
gitc/: aboutdialog.py  aboutdialog.ui  colorwidget.py  comboboxitemdelegate.py  datafetcher.py  diffview.py  excepthandler.py  findwidget.py  gitutils.py  gitview.py  logview.py  main.py  mergetool.py  mergewidget.py  preferences.py  settings.py  stylehelper.py  ui_aboutdialog.py  ui_gitview.py  ui_mainwindow.py  ui_preferences.py  waitingspinnerwidget.py
mergetool/: imgdiff.py
qgitc/: aboutdialog.py  aboutdialog.ui  actionrunner.py  agentmachine.py  agenttoolexecutor.py  agenttools.py  aichatbot.py  aichatcontextpanel.py  aichatcontextprovider.py  aichatdockwidget.py  aichatedit.py  aichathistory.py  aichathistorymodel.py  aichathistorypanel.py  aichathistorystore.py  aichattitlegenerator.py  aichatwidget.py  aichatwindow.py  aichatwindowcontextprovider.py  aicommitmessage.py  aicontexttoolbutton.py  airesolve.py  aitoolconfirmation.py  amendcommitmodel.py  application.py  applicationbase.py  asyncprocess.py  basemodel.py  blamefetcher.py  blameline.py  blamesourceviewer.py  blameview.py  blamewindow.py  branchcomparefetcher.py  branchcomparewindow.py  branchcomparewindow.ui  cancelevent.py  changeauthordialog.py  cherrypickcontextprovider.py  cherrypickprogressaichatcontextprovider.py  (+122 more)
qgitc/agent/: __init__.py  agent_loop.py  aimodel_adapter.py  compaction.py  message_convert.py  provider.py  (+9 more)
tests/: base.py  mockgithubcopilot.py  mocklocalllm.py  mockqnetworkreply.py  test_aboutdialog.py  test_actionrunner.py  test_agent_aimodel_adapter.py  test_agent_compaction.py  test_agent_loop.py  test_agent_loop_skills.py  test_agent_message_convert.py  test_agent_mode.py  test_agent_model_capabilities.py  test_agent_permission_presets.py  test_agent_permissions.py  test_agent_provider.py  test_agent_read_external_file.py  test_agent_read_file.py  test_agent_read_nonrepo_file.py  test_agent_repo_dir.py  test_agent_resolve_result_tool.py  test_agent_skills_loader.py  test_agent_skills_registry.py  test_agent_tool.py  test_agent_tool_executor.py  test_agent_tool_registration.py  test_agent_tool_registry.py  test_agent_tools_file.py  test_agent_tools_git_branch.py  test_agent_tools_git_read.py  test_agent_tools_git_show.py  test_agent_tools_git_status.py  test_agent_tools_skill.py  test_agent_types.py  test_agent_ui_tool.py  test_agentmachine.py  test_agents_integration.py  test_agents_llmflow.py  test_agents_runner.py  test_agents_runtime.py  (+80 more)
ui/: aboutdialog.py  genui.sh  gitview.py  gitview.ui  mainwindow.py  mainwindow.ui  preferences.py  preferences.ui
(+83 files in other folders)
