[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "qgitc"
dynamic = ["version"]
authors = [
    { name = "Weitian Leung", email = "weitianleung@gmail.com" }
]

description = "A cross-platform Git GUI tool"
readme = "README.md"
requires-python = ">=3.6"
license = "Apache-2.0"
license-files = [
    "qgitc/data/licenses/Apache-2.0.html",
]
keywords = [
    "git",
    "conflict",
    "viewer",
    "blame",
    "ai",
    "llm",
    "log",
    "commit",
    "code review",
]

classifiers = [
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "PySide6-Essentials>=6.3.0; sys_platform != 'linux'",
    "PySide6>=6.2.0; sys_platform == 'linux'",
    "chardet",
    "requests",
    "psutil; sys_platform == 'win32'",
]

[project.gui-scripts]
qgitc = "qgitc.main:main"
imgdiff = "mergetool.imgdiff:main"

[project.urls]
Homepage = "https://github.com/timxx/qgitc"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.setuptools.package-data]
qgitc = [
    "data/icons/*.ico",
    "data/icons/*.svg",
    "data/licenses/Apache-2.0.html",
    "data/translations/*.qm",
    "data/templates/*.xlsx",
]

[tool.setuptools_scm]
version_file = "qgitc/version.py"
