[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8", "isort"]
build-backend = "setuptools.build_meta"

[project]
name = "qgitc"
dynamic = ["version", "readme"]
authors = [
    { name = "Weitian Leung", email = "weitianleung@gmail.com" }
]

description = "A cross-platform Git GUI tool"
requires-python = ">=3.6"
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
keywords = [
    "git",
    "conflict",
    "viewer",
    "blame",
    "ai",
    "llm",
    "log",
    "commit",
    "code review",
]

classifiers = [
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "PySide6-Essentials>=6.3.0; sys_platform != 'linux'",
    "PySide6>=6.2.0; sys_platform == 'linux'",
    "chardet",
    "requests",
    "psutil; sys_platform == 'win32'",
    "packaging",
]

[project.gui-scripts]
qgitc = "qgitc.main:main"
imgdiff = "mergetool.imgdiff:main"

[project.urls]
Homepage = "https://github.com/timxx/qgitc"
Repository = "https://github.com/timxx/qgitc.git"
Issues = "https://github.com/timxx/qgitc/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["qgitc", "mergetool"]
exclude = ["tests*", "build*"]

[tool.setuptools.package-data]
qgitc = [
    "data/icons/*.ico",
    "data/icons/*.svg",
    "data/licenses/Apache-2.0.html",
    "data/translations/*.qm",
    "data/templates/*.xlsx",
]

[tool.setuptools_scm]
version_file = "qgitc/version.py"

[tool.isort]
profile = "black"
skip_gitignore = true
